# ocrd_fileformat

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  ocrd-fileformat-transform  ocrd-tool.json  pyproject.toml  requirements.txt
.circleci/: config.yml
ocrd_fileformat/: ocrd-tool.json  processor.py
tests/: conftest.py  test_0smoke.py  test_convert.py
