[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-ocrd"]

[project]
name = "ocrd_fileformat"
authors = [
    {name = "Konstantin Baierer", email = "unixprog@gmail.com"},
    {name = "Robert Sachunsky", email = "sachunsky@informatik.uni-leipzig.de"},
]
description = "OCR-D wrapper for ocr-fileformat"
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.8"
keywords = ["ocr", "ocr-d"]

dynamic = ["version", "dependencies", "optional-dependencies"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]

[project.scripts]
ocrd-fileformat-transform = "ocrd_fileformat.processor:cli"

[project.urls]
Homepage = "https://github.com/OCR-D/ocrd_fileformat"
Repository = "https://github.com/OCR-D/ocrd_fileformat.git"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}

[tool.setuptools]
packages = ["ocrd_fileformat"]
package-data = {"*" = ["*.json"]}
